<resources>

    <string name="app_name">Lernkarten</string>

    <string name="neue_lernkarten_button">Lernkarten anlegen</string>
    <string name="lernkarte_erzeugen_button">Lernkarte erzeugen</string>
    <string name="lernkarten_liste_button">Liste aller Lernkarten</string>
    <string name="lernkarten_alle_loeschen">Alle Lernkarten löschen</string>

    <string name="lernen_button">Lernen/Üben</string>
    <string name="lernmodus_unbenutzt_button">Unbenutzte Lernkarten</string>
    <string name="lernmodus_noch_nie_richtig_button">Noch nie richtig</string>
    <string name="lernmodus_mehr_falsche_als_richtige_button">Mehr falsche als richtige Antworten</string>
    <string name="lernmodus_zufallskarte_button">Zufällig ausgewählte Karte</string>
    <string name="lernmodus_lange_nicht_mehr_richtig_button">Schon lange nicht mehr richtig beantwortet</string>
    <string name="lernmodus_lange_nicht_mehr_falsch_button">Schon lange nicht mehr falsch beantwortet</string>
    <string name="zurueck_mainactivity_button">Zurück zum Hauptmenü</string>
    <string name="abbrechen_button">Abbrechen</string>
    <string name="umdrehen_button">Karte umdrehen</string>
    <string name="lernmodus_beenden_button">Lernmodus verlassen</string>

    <string name="richtig_button">Richtig beantwortet</string>
    <string name="falsch_button">Falsch beantwortet</string>

    <string name="lernkarte_anlegen">Neue Lernkarte</string>

    <string name="vorderseite_label">Vorderseite der Lernkarte:</string>
    <string name="rueckseite_label">Rückseite der Lernkarte:</string>

    <string name="lernkarte_vorne">Vorderseite der Lernkarte</string>
    <string name="lernkarte_hinten">Rückseite der Lernkarte</string>

    <string name="weiter_button">Weiter</string>
    <string name="title_activity_listen">ListenActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>