<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.LernMenueActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_unbenutzt_button"
        android:onClick="onButtonUnbenutzt" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_noch_nie_richtig_button"
        android:onClick="onButtonNochNieRichtig" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_mehr_falsche_als_richtige_button"
        android:onClick="onButtonMehrFalscheAlsRichtige" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_lange_nicht_mehr_richtig_button"
        android:onClick="onButtonLangeNichtMehrRichtigBeantwortet" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_lange_nicht_mehr_falsch_button"
        android:onClick="onButtonLangeNichtMehrFalschBeantwortet" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernmodus_zufallskarte_button"
        android:onClick="onButtonZufallskarte" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/zurueck_mainactivity_button"
        android:onClick="onButtonHauptmenu" />

</LinearLayout>