<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neue_lernkarten_button"
        android:onClick="onButtonNeueLernkarte" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernen_button"
        android:layout_marginTop="10dp"
        android:onClick="onButtonLernen" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernkarten_liste_button"
        android:layout_marginTop="10dp"
        android:onClick="onButtonListe" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lernkarten_alle_loeschen"
        android:layout_marginTop="25dp"
        android:onClick="onButtonAlleLoeschen" />

    <TextView
        android:id="@+id/anzahlTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:text="..." />

</LinearLayout>